[tool.poetry]
name = "api-session"
version = "1.4.2"
description = "requests.Session to work with JSON APIs"
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
license = "MIT"
homepage = "https://github.com/Bixoto/api-session"
include = ["api_session/py.typed"]
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 5 - Production/Stable",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
types-requests = "*"
pytest = "^8"
pytest-cov = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
