[tool.poetry]
name = "api-session"
version = "1.5.2"
description = "requests.Session to work with JSON APIs"
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
license = "MIT"
homepage = "https://github.com/Bixoto/api-session"
include = ["api_session/py.typed"]
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 5 - Production/Stable",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.26"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
types-requests = "*"
pytest = "^8"
pytest-cov = "^5"
ruff = "^0.9"
types-urllib3 = "*"

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "D", # docstrings
]
ignore = [
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D105", # "Missing docstring in magic method"
    "D107", # "Missing docstring in `__init__`"
    "D204", # "1 blank line required after class docstring"
    "D205", # "1 blank line required between summary line and description",
    "D208", # "Docstring is over-indented" (examples)
    "D400", # "First line should end with a period" (false-positives)
    "D401", # "First line of docstring should be in imperative mood"
    "D412", # "No blank lines allowed between a section header and its content"
    "D413", # "Missing blank line after last section"
    "D415", # "First line should end with a period, question mark, or exclamation point" (false-positives)

    "E402", # "Module level import not at top of file"
    "E501", # line too long
    "F401", # "unused" imports
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
