[project]
name = "api-session"
version = "1.5.3"
description = "requests.Session to work with JSON APIs"
authors = [{ name = "Baptiste Fontaine", email = "baptiste@bixoto.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests>=2.26,<3"]

[project.urls]
Homepage = "https://github.com/Bixoto/api-session"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "types-requests",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.9,<0.10",
    "types-urllib3",
]

[tool.hatch.build.targets.sdist.force-include]
"api_session/py.typed" = "api_session/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "D", # docstrings
]
ignore = [
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D105", # "Missing docstring in magic method"
    "D107", # "Missing docstring in `__init__`"
    "D204", # "1 blank line required after class docstring"
    "D205", # "1 blank line required between summary line and description",
    "D208", # "Docstring is over-indented" (examples)
    "D400", # "First line should end with a period" (false-positives)
    "D401", # "First line of docstring should be in imperative mood"
    "D412", # "No blank lines allowed between a section header and its content"
    "D413", # "Missing blank line after last section"
    "D415", # "First line should end with a period, question mark, or exclamation point" (false-positives)

    "E402", # "Module level import not at top of file"
    "E501", # line too long
    "F401", # "unused" imports
]
